Update and rename 2014-01-12-Migración.md to 2014-12-01-Migración.md

--- a/_posts/2014-12-01-Migración.md
+++ b/_posts/2014-12-01-Migración.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Presentación
+title: Precedentes para una Migración en la UN
 ---
 
 En esta presentación encontraremos algunos elementos del porqué en la Universidad Nacional de Colombia desde la Facultad de Ingeniería estamos proponiendo migrar neustros sistemas operativos, aplicaciones y servicios informáticos a software libre.
